# pronto_npc_backend

./: .dockerignore  .gitignore  Pronto NPC Backend API.yaml  Readme.md  automate_doc.py  automate_doc_old.py  automate_docs.py  backup_pronto_npc.sql  dataonly.sql  docker-compose.yml  dockerfile  main.py  manage.py  pronto_auth_npc_collection.json  pyproject.toml  requirements.txt  schema.yml  swagger_helper.py
.legacy/: npcsystemprofessions_views.py
age_category/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
archetype/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
character_ai_integration/: apps.py
character_group/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
character_images/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
character_sub_group/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
characters/: models.py  serializers.py  urls.py  views.py
documentation/: Doc prompt-Step1.txt  Doc prompt-Step1a  Doc prompt-Step2.txt  Doc prompt-Step3.txt  Pronto NPC (SaaS).postman_collection.json
genre/: models.py  serializers.py  urls.py  views.py
images/: models.py  serializers.py  tests.py  urls.py  views.py
npc_system/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
npc_system_professions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
npc_system_races/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
npc_system_rpg_classes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+158 files in other folders)
